XRWH-186 Fix for bug when search container overlaps header

--- a/plugins/rocks.xml.webhelp/resources/css/layout-common.css
+++ b/plugins/rocks.xml.webhelp/resources/css/layout-common.css
@@ -163,6 +163,7 @@
     background-color: var(--header-bg-color);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
+    z-index: 5;
 }
 
 .main-header {
